# happyfool-bot

./: .gitignore  CHANGELOG.md  README.md  sample-config.json  setup.cfg  setup.py
docs/: requirements.txt
src/happyfool_bot/: __init__.py  bot.py  cli.py  config.py  logger.py  obs_websocket.py  sfx.py  utils.py
src/happyfool_bot/db/: __init__.py  connection.py  dals.py  models.py
