[metadata]
name=happyfool_bot
version=1.1.0
url=https://github.com/eitchugo/happyfool_bot
author=Hugo Cisneiros (Eitch)
author_email=hugo.cisneiros@gmail.com
description=A Twitch bot that is happy and fool at the same time
long_description=file:README.md
long_description_content_type=text/markdown
license_files = LICENSE
classifiers=
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only

[options]
zip_safe=true
install_requirements=
    twitchio==2.2.0
    aiosqlite==0.17.0
    SQLAlchemy==1.4.31
    simpleobsws==0.0.7

